# mcp-chatbot-demo

./: .env.template  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
certs/: ca-root-cert.pem  (+18 more)
src/agent/: .dockerignore  Dockerfile  Dockerfile.tool-discovery  README.md  ai_tools_database_20250725_180049.xlsx  alembic.ini  assess_existing_tools.py  comprehensive_github_quality.py  discovery_state.json  export_tools.py  full_health_check.py  intelligent_discovery.py  pyproject.toml  run.sh
src/agent/alembic/: env.py
src/agent/alembic/versions/: 60d4d51d83f8_add_unified_activity_columns.py  complete_migration.py  e63cc2b7a066_change_pricing_to_text.py  initial_migration.py  quality_tracking_001.py  tools_migration.py
src/agent/app/: main.py
src/agent/app/agentic/: __init__.py  agentic.py
src/agent/app/api/: auth.py
src/agent/app/core/: config.py  exporter.py  security.py
src/agent/app/db/: database.py  init_db.py
src/agent/app/models/: chat.py
src/agent/app/schemas/: chat.py
src/agent/app/services/: agent_service.py  ai_directory_service.py  chat_service.py  discovery_pipeline.py  enhanced_discovery_service.py  external_data_service.py  freshness_checker.py  github_quality_checker.py  health_check_service.py  quality_dashboard_service.py  real_apis_service.py  real_external_api_service.py  unified_activity_service.py
src/agent/config/: fastagent.config.yaml  fastagent.tlsconfig.yaml
src/agent/mcp_servers/: __init__.py  tool_discovery_server.py  tool_discovery_server_sse.py
src/agent/tests/: conftest.py  test_chat.py
(+63 files in other folders)
